[package]
name = "edge_detector_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
# https://docs.rs/wasm-bindgen/latest/wasm_bindgen/
wasm-bindgen = "0.2"
# https://docs.rs/web-sys/latest/web_sys/
web-sys = { version = "0.3.77", features = ["console"] }
# https://docs.rs/image/latest/image/
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
# https://docs.rs/imageproc/latest/imageproc/
imageproc = "0.25"

[lib]
# https://doc.rust-lang.org/reference/linkage.html
crate-type = ["cdylib"]
